 - Fixed bug in JdbcClientHelper causing a premature close of the connection. Reported by Kyrre Kristiansen.
 - Fixed bug in JdbcClientHelper causing a commit even if autoCommit is enabled. Reported by Thierry Boileau.
 - Fixed bug in HttpUrlConnection setting a transfer mode for GET, when the entity existed but was empty.

[API changes]
 - Moved org.restlet.data.Result to org.restlet.resource.Result (deprecation used).
 - Replaced ConnectorService.get*Protocols() methods by just getClientProtocols() and getServerProtocols().
 - Refactored the TunnelService a bit and added better Javadocs.
 - DateUtils formats are lists now instead of arrays. Trying to modify system set dates will yield 
   UnsupportedOperationException. Piyush Purang.
 - Handler now supports dynamic dispatching to handle*() methods based on the request's method name. Only common 
   methods are statically provided (handleGet/Head/Post/Put/Delete). handleMove/Copy/Options/Trace are removed 
   from base Handler class (their default implementation did nothing useful anyway).
 - Renamed Form.getWebForm() into getWebRepresentation() to make space for a future getMultiPartRepresentation().
 - Replaced Tag(httpTag) constructor by a static parse(httpTag) method and renamed getName() into format().
   Suggested by Chris Grindstaff. I have also added a default constructor.
 - Removed the unused "fallbackLanguage" property/parameter from Handler, Factory, Response, ClientInfo, etc.
 - Renamed Status.REDIRECTION_MOVE_TEMPORARILY to REDIRECTION_TEMPORARY.
 - Renamed Status.REDIRECTION_MOVE_PERMANENTLY to REDIRECTION_PERMANENT.
 - Deprecated Request.setProtocol() method and ServerInfo.domain property. We now rely on Request.baseRef property.
 - Refactored the HTTP connectors to cleanly separate the server address, port from the baseRef and resourceRef properties.
 - Improved virtual hosting by using regex patterns in VirtualHost class.
 
[Enhancements] 